--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="send_box_color">#1E1E1E</color>
+    <color name="tab_selected_color">#FAFAFA</color>
+    <color name="tab_unselected_color">#919191</color>
+    <color name="custom_login_back">#F1F1F1</color>
 </resources>
