--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="tab_selected_color">#FAFAFA</color>
     <color name="tab_unselected_color">#919191</color>
     <color name="custom_login_back">#F1F1F1</color>
+    <color name="custom_back">#121212</color>
+    <color name="custom_toolbar_color">#2A9D8F</color>
+    <color name="topic_name_color">#CCCCCC</color>
+    <color name="send_edit_text">#282828</color>
+    <color name="hint_color">#CCCCCC</color>
+    <color name="unselected">#1C1C1C</color>
 </resources>
