--- a/app/src/main/res/layout/item_message_to.xml
+++ b/app/src/main/res/layout/item_message_to.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/mes_to_item_margin_top">
+    android:layout_marginTop="@dimen/mes_to_item_margin_top"
+    android:layout_marginBottom="@dimen/mes_to_item_margin_bottom"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvMessageTo"
